# PluginRust

./: .gitignore  CMakeLists.txt  README.md  dllmain.cpp
examples/Simple2D/: Rust2D.sprj
examples/Simple2D/shaders/: fragment.rs  vertex.rs
examples/SkyShader/: SkyShader.sprj
examples/SkyShader/shaders/: shader.rs
rust_crates/shader/: Cargo.toml
